Add attendance future-date validation test for Phase 9